--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.17.0
   cloud_firestore: ^3.1.16
   get_storage: ^2.0.3
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
