--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   get_storage: ^2.0.3
   timeago: ^3.2.2
   intl: ^0.17.0
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.2.17
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
@@ -79,10 +82,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: NiseBuschGardens
+      fonts:
+        - asset: assets/fonts/NiseBuschGardens.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
